# olive_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: README.md  worlds_config.yaml
launch/: simulation.launch.py  simulation_fortress.launch.py  simulation_fortress_yaml.launch.py  simulation_manual.launch.py
models/: README.md  generate_markers.py  generate_textures.py
models/barrel/: model.config  model.sdf
models/crate/: model.config  model.sdf
models/pillar/: model.config  model.sdf
models/vo_textures/: model.config  model.sdf
models/whycode_0/: model.config  model.sdf
models/whycode_0/materials/scripts/: marker.material
models/whycode_1/: model.config  model.sdf
models/whycode_1/materials/scripts/: marker.material
models/whycode_2/: model.config  model.sdf
models/whycode_2/materials/scripts/: marker.material
models/whycode_3/: model.config  model.sdf
models/whycode_3/materials/scripts/: marker.material
rviz/: olive_bot.rviz
urdf/: olive_bot.urdf.xacro  olive_bot_fortress.urdf.xacro
worlds/: README.md  fusion_test_world.sdf  fusion_test_world_fortress.sdf  industrial_facility_world.sdf  maze_world.sdf  office_corridor_world.sdf  warehouse_world.sdf
